--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <p>Want to find out more about healthy sleep? Great!<br> Just keep in mind that this site wasn't made by a doctor or a scientist.</p>
                         <p>So do your own research.</p>
                         <p>Or check out this Healthline article on <i>17 Proven Tips to Sleep Better at Night.</i></p>
-                        <a href="https://www.healthline.com/nutrition/17-tips-to-sleep-better" id="contactButton" class="cta-btn" target=”_blank”>READ ARTICLE</a>
+                        <a href="https://www.healthline.com/nutrition/17-tips-to-sleep-better" id="contactButton" class="cta-btn" target=”_blank” onclick="fbq('track', 'Contact');">READ ARTICLE</a>
                         <script type="text/javascript">
                               $('#contactButton').click(function() {
                                 fbq('track', 'Contact');
