--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 fbq('init', '791380958646592');
                 fbq('track', 'PageView');
                 fbq('track', 'Purchase');
+                fbq('trackCustom', 'UnusualEvent');
             </script>
             <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=791380958646592&ev=PageView&noscript=1"
